--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,9 +16,10 @@
   justify-content: center;
   padding: 120px 24px 160px 24px;
   pointer-events: none;
+  background: #111111;
 }
 
-.main:before {
+/* .main:before {
   background: radial-gradient(circle, rgba(2, 0, 36, 0) 0, #fafafa 100%);
   position: absolute;
   content: "";
@@ -26,7 +27,7 @@
   width: 100%;
   height: 100%;
   top: 0;
-}
+} */
 
 .main:after {
   content: "";
@@ -51,11 +52,11 @@
       transparent 0%
     ),
     radial-gradient(at 97% 21%, hsla(125, 98%, 72%, 1) 0px, transparent 50%),
-    radial-gradient(at 52% 99%, hsla(354, 98%, 61%, 1) 0px, transparent 50%),
-    radial-gradient(at 10% 29%, hsla(256, 96%, 67%, 1) 0px, transparent 50%),
+    radial-gradient(at 52% 99%, rgb(254, 160, 88) 0px, transparent 50%),
+    radial-gradient(at 10% 9%, rgb(165, 165, 165) 0px, transparent 50%),
     radial-gradient(at 97% 96%, hsla(38, 60%, 74%, 1) 0px, transparent 50%),
-    radial-gradient(at 33% 50%, hsla(222, 67%, 73%, 1) 0px, transparent 50%),
-    radial-gradient(at 79% 53%, hsla(343, 68%, 79%, 1) 0px, transparent 50%);
+    radial-gradient(at 33% 50%, rgb(189, 189, 189) 0px, transparent 50%),
+    radial-gradient(at 39% 53%, hsla(343, 68%, 79%, 1) 0px, transparent 50%);
   position: absolute;
   content: "";
   width: 100%;
@@ -82,27 +83,27 @@
 }
 
 .outline_btn {
-  @apply rounded-full border border-black bg-transparent py-1.5 px-5 text-black transition-all hover:bg-black hover:text-white text-center text-sm font-inter flex items-center justify-center;
+  @apply rounded-full border border-white bg-transparent py-1.5 px-5 text-white transition-all hover:bg-white hover:text-black text-center text-sm font-inter flex items-center justify-center;
 }
 
 .head_text {
-  @apply mt-5 text-5xl font-extrabold leading-[1.15] text-black sm:text-6xl;
+  @apply mt-5 text-5xl font-extrabold leading-[1.15] text-amber-200 sm:text-6xl;
 }
 
-.orange_gradient {
-  @apply bg-gradient-to-r from-amber-500 via-orange-600 to-yellow-500 bg-clip-text text-transparent;
+.gold_gradient {
+  @apply bg-gradient-to-br from-amber-200 to-yellow-500 bg-clip-text text-transparent;
 }
 
 .green_gradient {
   @apply bg-gradient-to-r from-green-400 to-green-500 bg-clip-text text-transparent;
 }
 
-.blue_gradient {
-  @apply bg-gradient-to-r from-blue-600 to-cyan-600 bg-clip-text text-transparent;
+.silver_gradient {
+  @apply bg-gradient-to-br from-slate-300 to-slate-500 bg-clip-text text-transparent;
 }
 
 .desc {
-  @apply mt-5 text-lg text-gray-600 sm:text-xl max-w-2xl;
+  @apply mt-5 text-lg text-gray-200 sm:text-xl max-w-2xl;
 }
 
 .search_input {
@@ -137,7 +138,7 @@
 
 /* Nav Component */
 .logo_text {
-  @apply max-sm:hidden font-satoshi font-semibold text-lg text-black tracking-wide;
+  @apply max-sm:hidden font-satoshi font-semibold text-lg text-white tracking-wide;
 }
 
 .dropdown {
@@ -150,7 +151,7 @@
 
 /* PromptCard Component */
 .prompt_card {
-  @apply flex-1 break-inside-avoid rounded-lg border border-gray-300 bg-white/20 bg-clip-padding p-6 pb-4 backdrop-blur-lg backdrop-filter md:w-[360px] w-full h-fit;
+  @apply flex-1 break-inside-avoid rounded-lg border border-gray-300 bg-white/10 bg-clip-padding p-6 pb-4 backdrop-blur-lg backdrop-filter md:w-[360px] w-full h-fit;
 }
 
 .flex-center {
@@ -167,4 +168,25 @@
 
 .flex-between {
   @apply flex justify-between items-center;
+}
+
+/* Carousel Component */
+.carousel {
+  @apply flex items-center justify-center gap-2 font-inter;
+}
+
+.carousel_button {
+  @apply bg-gradient-to-br from-amber-200 to-yellow-500 text-white border-none px-4 py-2 rounded-full cursor-pointer;
+}
+
+.quote_card {
+  @apply flex flex-col items-center justify-center;
+}
+
+.quote_text {
+  @apply text-gray-200 text-lg;
+}
+
+.quote_author {
+  @apply text-gray-200 text-sm;
 }
