fixed quote carousel, started todo list

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -245,11 +245,10 @@
 
 /* Carousel Component */
 .carousel {
-  @apply flex items-center justify-center gap-2 font-inter;
-}
-
-.carousel_button {
-  @apply bg-gradient-to-br from-amber-200 to-yellow-500 text-white border-none px-4 py-2 rounded-full cursor-pointer;
+  /* @apply flex justify-between gap-2 font-inter;  */
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
 }
 
 .quote_card {
@@ -257,7 +256,7 @@
 }
 
 .quote_text {
-  @apply text-gray-200 text-lg;
+  @apply text-gray-200 text-lg text-center;
 }
 
 .quote_author {
